feat: create detail activity, section chapter, and a database helper for chapters

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:src="@drawable/baseline_navigate_next_24"
-                android:background="@color/cardview_dark_background"
+                android:background="@color/hijau"
                 android:layout_marginTop="16dp"/>
 
         </LinearLayout>
