--- a/app/src/main/res/layout/list_item_chapter.xml
+++ b/app/src/main/res/layout/list_item_chapter.xml
@@ -26,15 +26,16 @@
             android:text="Title Chapter"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/darker" />
 
         <TextView
             android:id="@+id/tv_chapter_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chapter description+"
+            android:text="Chapter description"
+            android:textColor="@color/dark"
+            android:textStyle="italic"
             android:textSize="14sp"
-            android:textColor="@android:color/darker_gray"
             android:layout_marginTop="4dp" />
 
     </LinearLayout>
