--- a/app/src/main/res/layout/list_item_quiz.xml
+++ b/app/src/main/res/layout/list_item_quiz.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardCornerRadius="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/hijau"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginHorizontal="8dp">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        android:background="@color/hijau" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvQuestion"
@@ -22,47 +22,37 @@
             android:textStyle="bold"
             android:padding="8dp"/>
 
-    </androidx.cardview.widget.CardView>
-
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="8dp"
-        android:background="@color/white">
-
-        <RadioButton
-            android:id="@+id/rbOption1"
+        <RadioGroup
+            android:id="@+id/radioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pilihan 1"/>
+            android:orientation="vertical"
+            android:layout_marginTop="8dp">
 
-        <RadioButton
-            android:id="@+id/rbOption2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pilihan 2"/>
+            <RadioButton
+                android:id="@+id/rbOption1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pilihan 1"/>
 
-        <RadioButton
-            android:id="@+id/rbOption3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pilihan 3"/>
+            <RadioButton
+                android:id="@+id/rbOption2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pilihan 2"/>
 
-        <RadioButton
-            android:id="@+id/rbOption4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pilihan 4"/>
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/rbOption3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pilihan 3"/>
 
-    <Button
-        android:id="@+id/btnSubmit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Submit"
-        android:layout_marginTop="16dp"/>
+            <RadioButton
+                android:id="@+id/rbOption4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pilihan 4"/>
 
-</LinearLayout>
+        </RadioGroup>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
