feat: delete and modify some activity

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -25,7 +25,7 @@
         android:id="@+id/rvQuiz"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/list_item_quiz"
+        tools:listitem="@layout/list_item_quiz_detail"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
