feat: create register and login activity and modify some activity

--- a/app/src/main/res/layout/activity_lesson_detail.xml
+++ b/app/src/main/res/layout/activity_lesson_detail.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/light_active"
     tools:context=".LessonDetailActivity">
 
@@ -13,9 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:cardCornerRadius="32dp">
 
         <ImageView
@@ -28,7 +26,7 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="MATEMATIKA"
         android:textSize="32sp"
@@ -36,9 +34,7 @@
         android:textStyle="bold"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_backgroundImg"/>
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/tv_desc"
@@ -49,9 +45,7 @@
         android:textStyle="italic"
         android:textColor="@color/darker"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+        android:layout_marginTop="8dp"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
@@ -59,15 +53,11 @@
         android:layout_height="wrap_content"
         android:background="@color/dark"
         app:tabTextColor="@color/light_active"
-        app:layout_constraintTop_toBottomOf="@id/tv_desc"
         android:layout_marginTop="8dp"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_desc"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_height="wrap_content" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
