--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,9 +6,9 @@
         android:icon="@drawable/baseline_home_24"
         android:title="Home" />
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/baseline_notifications_24"
-        android:title="Notification" />
+        android:id="@+id/navigation_favorite"
+        android:icon="@drawable/baseline_favorite_24"
+        android:title="Favorite" />
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_person_24"
