--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -5,73 +5,63 @@
     style="@style/CardView.Light"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="4dp"
-    app:cardCornerRadius="16dp">
+    app:cardCornerRadius="8dp"
+    android:layout_margin="8dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-        <ImageView
-            android:id="@+id/iv_item_image"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@android:color/white"
-            android:contentDescription="@string/image"
-            android:scaleType="centerCrop"
-            app:layout_constraintDimensionRatio="H,1.5:1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="#7F000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/top_space" />
-
-        <Space
-            android:id="@+id/top_space"
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toTopOf="@+id/tv_item_title"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:cardCornerRadius="8dp"
+            app:cardElevation="10dp"
+            android:backgroundTint="@color/light"
+            android:layout_gravity="center">
 
-        <TextView
-            android:id="@+id/tv_item_title"
-            android:layout_width="0dp"
+            <ImageView
+                android:id="@+id/iv_item_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/science"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="#FFFFFFFF"
-            app:layout_constraintBottom_toTopOf="@+id/tv_item_subtitle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="Mata Pelajaran" />
+            android:orientation="vertical"
+            android:layout_margin="12dp"
+            android:layout_gravity="center">
 
-        <TextView
-            android:id="@+id/tv_item_subtitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="#B3FFFFFF"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_item_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="Deskripsi" />
+            <TextView
+                android:id="@+id/tv_item_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="IPA"
+                android:fontFamily="@font/nunito_extrabold"
+                android:textSize="24sp"
+                android:textColor="@color/black"/>
 
+            <TextView
+                android:id="@+id/tv_item_subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="IPA itu menyenangkan!"
+                android:fontFamily="@font/nunito_reguler"
+                android:textColor="@color/font"
+                android:textStyle="italic"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_arrow"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
