--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,14 +4,14 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/baseline_home_24"
-        android:title="Home" />
+        android:title="Beranda" />
     <item
-        android:id="@+id/navigation_favorite"
-        android:icon="@drawable/baseline_favorite_24"
-        android:title="Favorite" />
+        android:id="@+id/navigation_history"
+        android:icon="@drawable/baseline_history_24"
+        android:title="Riwayat" />
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_person_24"
-        android:title="Profile" />
+        android:title="Profil" />
 
 </menu>
