--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:labelVisibilityMode="selected"
+        app:itemIconTint="@color/bottom_nav_selection"
+        app:itemTextColor="@color/normal"
         app:menu="@menu/bottom_nav_menu"/>
 
     <fragment
