--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,19 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:id="@+id/parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.history.HistoryFragment">
 
-    <TextView
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:src="@color/normal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageView
+        android:id="@+id/half_round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Riwayat"
+        android:src="@drawable/half_round_normal"
+        app:layout_constraintTop_toTopOf="@id/parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/nunito_extrabold"
-        android:textColor="@color/black"
-        android:textSize="28sp"
-        android:layout_marginHorizontal="8dp"/>
+        android:text="Riwayat"
+        android:textColor="@color/background"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/tvNotFound"
@@ -25,12 +48,17 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         android:visibility="gone"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/list_quiz_history_item"/>
+        tools:listitem="@layout/list_quiz_history_item"
+        app:layout_constraintTop_toBottomOf="@id/half_round"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
